src/objects/ints__EfxReport_Address__c.object
<CustomObject>
    <fields>
        <fullName>ints__City_Code__c</fullName>
        <label>City Code</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__CivicNumber__c</fullName>
        <label>CivicNumber</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Code__c</fullName>
        <label>Code</label>
        <length>2</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__DateReported__c</fullName>
        <label>DateReported</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Description__c</fullName>
        <label>Description</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport Addresses</relationshipLabel>
        <relationshipName>EfxReport_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Province_Code__c</fullName>
        <label>Province Code</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Province_Description__c</fullName>
        <label>Province Description</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__StreetName__c</fullName>
        <label>StreetName</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Address</label>
    <nameField>
        <displayFormat>EFX_ADDR-{000000000}</displayFormat>
        <label>EfxReport Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>